chore: add reponsivity

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
   </head>
   <body>
     <header id="container-header">
@@ -34,11 +38,15 @@
         <a href="#">Galeria</a>
         <a href="#">Contato</a>
       </div>
+      <div id="reponsive-menu">
+        <img src="./assets/icons8-menu-squared-50.png" alt="Icone de Menu" id="logo-menu">
+      </div>
     </header>
     <section id="container-main">
       <div id="title-main">
         <h1>Paraiso</h1>
-        <p>Brigadeiros</p>
+        <p>BRIGADEIROS</p>
+        <img id="logo-laco" src="./assets/logo-laco.svg" alt="Laço do logo">
       </div>
     </section>
     <section id="container-affection">
@@ -50,7 +58,7 @@
       <div class="box-affection" id="box-affection-rigth">
           <div id="content-affection">
             <p>
-                Sou um parágrafo. Clique aqui para editar e adicionar o seu próprio texto. É fácil! Basta clicar em "Editar Texto" ou clicar duas vezes sobre mim e você poderá adicionar o seu próprio conteúdo e trocar fontes. Sinta-se à vontade para arrastar e soltar em qualquer lugar em sua página. Sou um ótimo lugar para você contar sua história e permitir que seus clientes saibam um pouco mais sobre você.</br></br>
+                Sou um parágrafo. Clique aqui para editar e adicionar o seu próprio texto. É fácil. Basta clicar em Editar Texto ou clicar duas vezes sobre mim e você poderá adicionar o seu próprio conteúdo e trocar fontes. Se sinta à vontade para arrastar e soltar em qualquer lugar em sua página. Sou um ótimo lugar para você contar sua história e permitir que seus clientes saibam um pouco mais sobre você.</br></br></br>
 
                 Este é um ótimo espaço para escrever um texto longo sobre a sua empresa e seus serviços. Você pode usar esse espaço para entrar em detalhes sobre a sua empresa. Fale sobre a sua equipe e sobre os serviços prestados por você. Conte aos seus visitantes sobre como teve a idéia de iniciar o seu negócio e o que o torna diferente de seus concorrentes. Faça com que sua empresa se destaque e mostre quem você é. Dica: Adicione a sua própria imagem clicando duas vezes sobre a imagem e clicando em Trocar Imagem.
             </p>
@@ -64,18 +72,19 @@
         </div>
         <div class="box-flavors" id="box-flavors-center">            
                 <p>
-                Sou um parágrafo. Clique aqui para editar e adicionar o seu próprio texto. É fácil!   Basta clicar em "Editar Texto" ou clicar duas vezes sobre mim e você poderá adicionar o seu próprio conteúdo e trocar fontes.
+                Sou um parágrafo. Clique aqui para editar e adicionar o seu próprio texto. É fácil.   Basta clicar em Editar Texto ou clicar duas vezes sobre mim e você poderá adicionar o seu próprio conteúdo e trocar fontes.
                 </p>            
         </div>
         <div class="box-flavors" id="box-flavors-bottom">
                 <div class="box-image-flavors">
                     <img class="img-flavors" src="./assets/brigadeiro-01.png" alt="Foto de Brigadeiros">
+                    
                 </div>
                 <div class="box-image-flavors">
-                    <img class="img-flavors" src="./assets/brigadeiro-01.png" alt="Foto de Brigadeiros">
+                    <img class="img-flavors" src="./assets/brigadeiro-02.png" alt="Foto de Brigadeiros">
                 </div>
                 <div class="box-image-flavors">
-                    <img class="img-flavors" src="./assets/brigadeiro-01.png" alt="Foto de Brigadeiros">
+                    <img class="img-flavors" src="./assets/brigadeiro-03.png" alt="Foto de Brigadeiros">
                 </div>
             </div>
     </section>
@@ -84,7 +93,7 @@
             <div id="content-know">
                 <h1>CONHEÇA QUEM FAZ</h1></br>
                 <p>
-                    Sou um parágrafo. Clique aqui para editar e adicionar o seu próprio texto. É fácil! Basta clicar em "Editar Texto" ou clicar duas vezes sobre mim e você poderá adicionar o seu próprio conteúdo e trocar fontes. Sinta-se à vontade para arrastar e soltar em qualquer lugar em sua página. Sou um ótimo lugar para você contar sua história e permitir que seus clientes saibam mais sobre você.</br></br>
+                    Sou um parágrafo. Clique aqui para editar e adicionar o seu próprio texto. É fácil. Basta clicar em Editar Texto ou clicar duas vezes sobre mim e você poderá adicionar o seu próprio conteúdo e trocar fontes. Se sinta à vontade para arrastar e soltar em qualquer lugar em sua página. Sou um ótimo lugar para você contar sua história e permitir que seus clientes saibam mais sobre você.</br></br>
 
                     Este é um ótimo espaço para escrever um texto longo sobre a sua empresa e seus serviços. Você pode usar esse espaço para entrar em detalhes sobre a sua empresa.
                 </p>
@@ -102,21 +111,22 @@
     <section id="container-contact">
         <div class="box-contact" id="box-contact-left">
             <div id="title-contact">
-                <h1>ESPERAMOS</br> O SEU CONTATO</h1>
+                <h1>ESPERAMOS</br> SEU CONTATO</h1>
                 <p>(11) 3456.7890</p>
                 <p>Av. Bernardino de Campos, 98</p>
                 <p>São Paulo/SP</p>
-                <img src="./assets/icons8-f-do-facebook.svg" alt="Logo do Facebook" class="icons-social-media">
-                <img src="./assets/icons8-instagram.svg" alt="Logo do Instagram" class="icons-social-media">
-                <img src="./assets/icons8-twitter (1).svg" alt="Logo do Twitter" class="icons-social-media">
+                <a href="https://www.facebook.com" target="_blank"><img src="./assets/icons8-f-do-facebook.svg" alt="Logo do Facebook" class="icons-social-media"></a>
+                <a href="https://www.instagram.com" target="_blank"><img src="./assets/icons8-instagram.svg" alt="Logo do Instagram" class="icons-social-media"></a>
+                <a href="https://www.pinterest.com" target="_blank"><img src="./assets/icons8-pinterest-p-32.png" alt="Logo do Pinterest" class="icons-social-media"></a>
+                <a href="https://www.twitter.com" target="_blank"><img src="./assets/icons8-twitter (1).svg" alt="Logo do Twitter" class="icons-social-media"></a>
             </div>
         </div>
         <div class="box-contact" id="box-contact-rigth">
             <form action="post">
-                <input class="contact-input" type="text" placeholder="Nome">
-                <input class="contact-input" type="text" placeholder="E-mail">
-                <input class="contact-input" type="text" placeholder="Telefone">
-                <textarea class="contact-input" name="" id="contact-textarea" cols="30" rows="10" placeholder="Digite sua mensagem aqui..."></textarea>
+                <input class="contact-input" type="text" name="nome" placeholder="Nome">
+                <input class="contact-input" type="email" name="emal" placeholder="E-mail">
+                <input class="contact-input" type="text" name="telefone" placeholder="Telefone">
+                <textarea class="contact-input" name="comentario" id="contact-textarea" cols="30" rows="10" placeholder="Digite sua mensagem aqui..."></textarea>
                 <button id="bt-contact" type="submit">Enviar</button>
             </form>
         </div>
