chore: add commits

--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
     <link rel="stylesheet" href="./styles/photos.css">
     <link rel="stylesheet" href="./styles/contact.css">
     <link rel="stylesheet" href="./styles/footer.css">
-
+    <!-- Fontes -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
-
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cookie&display=swap" rel="stylesheet">
   </head>
   <body>
     <header id="container-header">
@@ -43,6 +42,7 @@
       </div>
     </header>
     <section id="container-main">
+      <!-- Principal com o efeito parallax -->
       <div id="title-main">
         <h1>Paraiso</h1>
         <p>BRIGADEIROS</p>
@@ -50,6 +50,7 @@
       </div>
     </section>
     <section id="container-affection">
+      <!-- Parte da descrição -->
       <div class="box-affection" id="box-affection-left">
         <div id="title-affection">
           <h1>COM CHOCOLATE</br> E COM AFETO</h1>
@@ -109,6 +110,7 @@
         <div class="box-photo" id="box-photo-rigth"></div>
     </section>
     <section id="container-contact">
+      <!-- Formulário e contato. A estilização está no arquivo contact.css -->
         <div class="box-contact" id="box-contact-left">
             <div id="title-contact">
                 <h1>ESPERAMOS</br> SEU CONTATO</h1>
@@ -122,7 +124,7 @@
             </div>
         </div>
         <div class="box-contact" id="box-contact-rigth">
-            <form action="post">
+            <form action="#" method="post">
                 <input class="contact-input" type="text" name="nome" placeholder="Nome">
                 <input class="contact-input" type="email" name="emal" placeholder="E-mail">
                 <input class="contact-input" type="text" name="telefone" placeholder="Telefone">
